# lumos

./: .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  README.md  ROADMAP.md  lovable-prompt.md  migrate-to-getlumos.sh
.github/: SECURITY.md
.github/ISSUE_TEMPLATE/: README.md  bug_report.yml  config.yml  documentation.yml  example_request.yml  feature_request.yml  vscode_extension.yml
.github/profile/: README.md
.github/scripts/: setup-labels.sh
.github/workflows/: ci.yml  release.yml  sync-changelog-to-docs.yml
assets/logo/: README.md
docs/: MIGRATION.md  VISION.md  cli-reference.md  enum-design.md  execution-plan.md  extraction-implementation-logic.md  extraction-tool-design.md  extraction-tool-example.md  getting-started.md  integration-guide.md  marketing-website-spec.md  safety-features-design.md  syntax-reference.md
docs/security/: account-size.md  audit-checklist.md  fuzzing.md  static-analysis.md
examples/: README.md
examples/dao-governance/: schema.lumos
examples/defi-staking/: schema.lumos
examples/gaming/: schema.lumos
examples/nft-marketplace/: schema.lumos
examples/token-vesting/: schema.lumos
linguist/: languages.yml
linguist/docs/: LINGUIST_SUBMISSION_GUIDE.md  README.md
linguist/grammars/: lumos.tmLanguage.json
linguist/samples/: enums.lumos
vscode-lumos/: .vscodeignore  BRANDING.md  CHANGELOG.md  LICENSE  README.md  create_icon.py  design-philosophy.md  language-configuration.json  package-lock.json  package.json
vscode-lumos/snippets/: lumos.json
vscode-lumos/src/: extension.ts
(+1 files in other folders)
