[workspace]
members = [
    "packages/core",
    "packages/cli",
]
resolver = "2"

[workspace.package]
version = "0.1.1"
edition = "2021"
rust-version = "1.75"
license = "MIT OR Apache-2.0"
repository = "https://github.com/getlumos/lumos"
homepage = "https://lumos-lang.org"
authors = ["RECTOR <rz1989s@gmail.com>"]
keywords = ["solana", "blockchain", "codegen", "borsh", "anchor"]
categories = ["development-tools", "parser-implementations", "command-line-utilities"]
readme = "README.md"

[workspace.dependencies]
# Parsing
syn = { version = "2.0", features = ["full", "extra-traits"] }
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Code generation
quote = "1.0"
proc-macro2 = "1.0"

# CLI
clap = { version = "4.5", features = ["derive", "cargo"] }
anyhow = "1.0"
thiserror = "1.0"

# Utilities
tracing = "0.1"
tracing-subscriber = "0.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
